Fixed Hero Section Background Gradiant Color Direction On Mobile

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -256,6 +256,7 @@ a {
     .hero {
         padding-bottom: 120px;
         height: fit-content;
+        background-image: linear-gradient(var(--Very-light-red), var(--Light-red));
     }
 
     .hero main h1  {
